syntax = "proto3";

service CheckMateService {
  rpc Greet(GreetRequestProto) returns (GreetResponseProto);
  rpc StreamChat(StreamChatRequestProto) returns (stream StreamChatResponseProto);
}

message GreetRequestProto {
  string name = 1;
}

message GreetResponseProto {
  string message = 1;
}

message CheckMateChatMessageProto {
  enum Role {
    ROLE_UNSPECIFIED = 0;
    ROLE_USER = 1;
    ROLE_ASSISTANT = 2;
  }
  Role role = 1;
  string text = 2;
}

message StreamChatRequestProto {
  repeated CheckMateChatMessageProto messages = 1;
}

message StreamChatResponseProto {
  oneof payload {
    string thinking_delta = 1;
    string response_delta = 2;
    bool done = 3;
  }
}
